--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mediumish-gohugo-theme"]
-	path = mediumish-gohugo-theme
+	path = themes/mediumish-gohugo-theme
 	url = https://github.com/lgaida/mediumish-gohugo-theme
