--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://prosillo.github.io/raphazilla/"
+baseURL = "http://prosillo.github.io/raphazilla"
 languageCode = "en-us"
 title = "Raphazilla"
 theme = "mediumish-gohugo-theme"
@@ -6,7 +6,7 @@ summaryLength = 25
 copyright = "Rapha Prosillo - All rights reserved"
 
 [params]
-  logo = "static/logo.png"
+  logo = "/static/logo.png"
   description = "Raphazilla blog"
   #customCSS = ["css/tweaks.css", "css/customHeader.css"]
 
