--- a/config.toml
+++ b/config.toml
@@ -6,21 +6,19 @@ summaryLength = 25
 copyright = "Rapha Prosillo - All rights reserved"
 enableEmoji = true
 publishDir = "content"
-#disqusShortname = "your-shortname-here"
-#googleAnalytics = "UA-1XXXXXXX1-1"
 
 [params]
-  logo = "/images/logo.png"
+  logo = "/raphazilla/images/logo.png"
   description ="the clean blog!"
   #mailchimp = "you can provide a mailchimp-link here"
 
 [params.author]
   name = "Rapha"
-  thumbnail = "/images/author.png"
+  thumbnail = "/raphazilla/images/author.png"
   description = "Creator of this blog."
 
 [params.index]
-  picture = "/images/author.png"
+  picture = "/raphazilla/images/author.png"
   title = "Rapha"
   subtitle = "I'm a unique placeholder. Working here and there!"
   mdtext = '''
@@ -32,7 +30,7 @@ Currently trying to get this blog running, still don't know what the blog will b
 
 [params.social]
   github = "prosillo"
-  linkedin = "raphael.prosillo"
+  linkedin = "raphaelprosillo"
 
 ## Main Menu
 [[menu.main]]
