--- a/config.toml
+++ b/config.toml
@@ -14,11 +14,11 @@ publishDir = "content"
 
 [params.author]
   name = "Rapha"
-  thumbnail = "/raphazilla/images/author.png"
+  thumbnail = "/raphazilla/images/author.jpg"
   description = "Creator of this blog."
 
 [params.index]
-  picture = "/raphazilla/images/author.png"
+  picture = "/raphazilla/images/author.jpg"
   title = "Rapha"
   subtitle = "I'm a unique placeholder. Working here and there!"
   mdtext = '''
