--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ publishDir = "content"
 [params.index]
   picture = "/raphazilla/images/author.jpg"
   title = "Rapha here!"
-  subtitle = "I'm a unique placeholder. Working here and there!"
+  subtitle = "Brazilian guys living in the amazing Czech Republic!"
   mdtext = '''
 👋 Hi there! I'm a Senior System Administrator with over 15 years of experience, specializing in Resilience and Data Backup and Recovery. I thrive in managing mission-critical systems and securing diverse workloads. 🛡️💻
 
