--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ enableEmoji = true
 publishDir = "content"
 
 [params]
-  logo = "/raphazilla/images/logo.png"
+  logo = "/raphazilla/images/logo2.jpg"
   description ="Another Techblog.."
 
 [params.author]
