--- a/config.toml
+++ b/config.toml
@@ -21,8 +21,7 @@ publishDir = "content"
   title = "Rapha here!😎"
   subtitle = "Brazilian guys living in the amazing Czech Republic!"
   mdtext = '''
-# 👋 Olá pessoal!
-
+👋 Olá pessoal!
 Sou o Rapha , um Administrador de Sistemas Sênior com mais de 15 anos de experiência, especializado em Resiliência e Backup e Recuperação de Dados. Tenho experiência em gerenciar sistemas críticos e garantir a segurança de cargas de trabalho diversas. 🛡️💻
 Ao longo da minha carreira, tive o privilégio de contribuir com minhas habilidades para grandes empresas de tecnologia, oferecendo suporte a diversas indústrias, incluindo os setores farmacêutico e químico. 🏭
 Com uma curiosidade natural, estou sempre em busca de algo novo para aprender. Seja as últimas tecnologias, explorar arte e música, mergulhar na história ou imergir nas maravilhas da natureza, sou apaixonado por expandir meu conhecimento e habilidades. 
