--- a/config.toml
+++ b/config.toml
@@ -51,4 +51,4 @@ Com uma curiosidade natural, estou sempre em busca de algo novo para aprender. S
 [[redirects]]
   from = '/**'
   status = 404
-  to = '/404.html'
+  to = '404.html'
