--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://raphazilla.github.io/raphazilla"
+baseURL: "https://github.io/raphazilla"
 title: "Raphazilla"
 theme: PaperMod
 languageCode: "pt-br"
