--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -57,7 +57,8 @@ jobs:
         run: |
           hugo \
             --gc \
-            --minify \        
+            --minify \
+            --baseURL "https://raphazilla.github.io/raphazilla/"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
