--- a/config.yml
+++ b/config.yml
@@ -65,10 +65,10 @@ languages:
     menu:
       main:
         - name: Blog
-          url: /blog
+          url: /en-us/blog
           weight: 10
         - name: About
-          url: /about
+          url: /en-us/about
           weight: 20
         - name: GitHub
           url: https://github.com/raphazilla
@@ -76,13 +76,13 @@ languages:
           params:
             target: "_blank"
         - name: Tags
-          url: /tags
+          url: /en-us/tags
           weight: 40
         - name: Archives
-          url: /archives
+          url: /en-us/archives
           weight: 50  
         - name: Search
-          url: /search
+          url: /en-us/search
           weight: 60
     params:
       homeInfoParams:
