--- a/config.yml
+++ b/config.yml
@@ -42,13 +42,13 @@ languages:
           params:
             target: "_blank"
         - name: Tags
-          url: /tags
+          url: tags/
           weight: 40
         - name: Archives
-          url: /archives
+          url: archives/
           weight: 50  
         - name: Buscar
-          url: /search
+          url: search/
           weight: 60
     params:
       homeInfoParams:
@@ -65,10 +65,10 @@ languages:
     menu:
       main:
         - name: Blog
-          url:  /blog
+          url:  blog/
           weight: 10
         - name: About
-          url: /about
+          url: about/
           weight: 20
         - name: GitHub
           url: https://github.com/raphazilla
@@ -76,13 +76,13 @@ languages:
           params:
             target: "_blank"
         - name: Tags
-          url: /tags
+          url: tags/
           weight: 40
         - name: Archives
-          url: /archives
+          url: archives/
           weight: 50  
         - name: Search
-          url: /search
+          url: search/
           weight: 60
     params:
       homeInfoParams:
